<resources>
    <string name="app_name">ShelfLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_pantry">My Pantry</string>
    <string name="add_item">Add Item</string>
    <string name="recipe">Recipe</string>
    <string name="add_item_Add_Item">Add Item</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="set_experation_date">Set Experation Date</string>
    <string name="textview">TextView</string>
    <string name="quantity">Quantity:</string>
    <string name="item_name">Item Name</string>
    <string name="set_date">Set Date</string>
    <string name="back_Calender">Back</string>
    <string name="set_expiration_date">Set Expiration Date</string>
    <string name="start_now">Start Now</string>
    <string name="todo">TODO</string>
    <string name="back_recipe_list">Back</string>
    <string name="recipes">Recipes</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="back_recipe_outpur">Back</string>
    <string name="back_edit">Back</string>
    <string name="submit">Submit</string>
    <string name="editing_item">Editing Item</string>
    <string name="calender">Calender</string>
    <string name="delete">Delete</string>
    <string name="item_name_edit">Item Name</string>
    <string name="textview_edit">TextView</string>
    <string name="eDate" > Expiration Date:</string>
    <string name="item">Item</string>
    <string name="added">Added</string>
    <string name="expires">Expires:</string>
</resources>